--- a/build.gradle
+++ b/build.gradle
@@ -32,4 +32,7 @@ dependencies {
 
     implementation 'com.h2database:h2'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.flywaydb:flyway-core'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-security-test'
 }
