--- a/build.gradle
+++ b/build.gradle
@@ -34,5 +34,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.springframework.boot:spring-boot-starter-security'
-    implementation 'org.springframework.boot:spring-security-test'
+    implementation 'org.springframework.security:spring-security-test'
 }
