--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MYSQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/ponto_inteligente
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -9,4 +9,8 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
+
+server.port=8090
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 
