--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -1,4 +1,4 @@
-# configura banco in memory H2
+# As linhas abaixo configuram um H2
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
@@ -7,3 +7,6 @@ spring.datasource.password=sa
 
 # Desabilita Flyway migration
 spring.flyway.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
+
