--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MYSQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
+spring.datasource.url=jdbc:mysql://192.168.99.100:3306/ponto_inteligente
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -13,4 +13,5 @@ spring.jpa.properties.hibernate.type=trace
 server.port=8090
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 
