--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MYSQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/ponto_inteligente
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
 spring.datasource.username=root
 spring.datasource.password=root
 
