--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,6 +10,10 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.type=trace
 
+# As duas linhas abaixo são necessárias para o Hibernate escrever as queries e o nome das colunas obedecendo oq vc mapear e não colocando os "_"
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
 server.port=8090
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
