Criado teste do relatório, implementando filtros dinamicos com a API de queries e specifications

--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -10,3 +10,7 @@ spring.flyway.enabled=false
 spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 
+# As duas linhas abaixo são necessárias para o Hibernate escrever as queries e o nome das colunas obedecendo oq vc mapear e não colocando os "_"
+spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
