--- a/build.gradle
+++ b/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'io.jsonwebtoken:jjwt:0.7.0'
 }
