--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # MYSQL
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://192.168.99.100:3306/ponto_inteligente
+spring.datasource.url=jdbc:mysql://localhost:3306/ponto_inteligente
 spring.datasource.username=root
 spring.datasource.password=root
 
@@ -17,4 +17,9 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 server.port=8090
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
+
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+jwt.expiration=604800
 
