--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -14,3 +14,7 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
+# JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+# token com duração de 7 dias
+jwt.expiration=604800
