--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ repositories {
 dependencies {
     compile('org.springframework.boot:spring-boot-starter')
     compile("org.springframework.boot:spring-boot-devtools")
+    compile 'com.auth0:mvc-auth-commons:1.+'
     runtime('org.springframework.boot:spring-boot-devtools')
     runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
@@ -42,4 +43,11 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.7.0'
     implementation 'io.springfox:springfox-swagger2:2.9.2'
     implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+    implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.0.0.RELEASE'
+    implementation 'org.springframework.social:spring-social-facebook'
+    implementation 'com.mashape.unirest:unirest-java:1.4.9'
+    implementation 'org.apache.httpcomponents:httpclient:4.3.6'
+    implementation 'org.apache.httpcomponents:httpasyncclient:4.0.2'
+    implementation 'org.apache.httpcomponents:httpmime:4.3.6'
+    implementation 'org.json:json:20140107'
 }
