--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
 # JWT
 jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
 # token com duração de 7 dias
-jwt.expiration=604800
+jwt.expiration=86400000
 
